# madamis-ai

./: .gitignore  .mise.toml  README.md  compose.yaml  spec.md
.backlog/: task.md
.gemini/: settings.json
.gemini/hooks/: check.sh
.gemini/skills/jj-vcs/: SKILL.md
.gemini/skills/jj-vcs/references/: git-to-jj.md
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/madamis/: __init__.py  agent.py  app.py  config.py  dice.py  firestore_session_service.py  interface.py  logging_config.py  main.py  routes.py  runtime.py  schemas.py
backend/src/yume_uranai/: __init__.py  agent.py  interface.py  main.py
backend/tests/: test_api.py  test_dice.py  test_interface.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  vitest.setup.ts
frontend/__tests__/: page.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
interface/: .dockerignore  .env.example  Dockerfile  pyproject.toml
interface/madamis_interface/: bot.py  interface.py  logging_config.py  main.py
interface/src/yume_uranai_interface/: bot.py  interface.py  main.py
interface/tests/: test_interface.py
terraform/: main.tf  variables.tf
