[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "madamis-ai"
version = "0.1.0"
description = "マダミスサポート AI バックエンド（FastAPI）"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.31.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]

[tool.hatch.build.targets.wheel]
packages = ["madamis"]

[tool.uv]
package = true
